[package]
name = "gtk-qq"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["./libs/*"]


[dependencies.widgets]
path = "./libs/widgets"

[dependencies.resource-loader]
path = "./libs/resource-loader"

[dependencies]
tokio = { version = "1.18.2", features = ["sync"] }
rand = "0.8.5"
async-trait = "0.1.53"
once_cell = "1.11.0"
rusqlite = "0.27.0"
reqwest = "0.11.10"
qrcode-png = "0.4.0"
typed-builder = "0.10"
bincode = "1.3.3"
base64 = "0.13.0"
relm4 = { version = "0.4.4", features = ["macros", "libadwaita"]}
ricq = "0.1.15"

[profile.release]
lto = true
